[gd_scene load_steps=7 format=3 uid="uid://3woresuocofq"]

[ext_resource type="Script" path="res://label.gd" id="1_75kao"]
[ext_resource type="Script" path="res://button.gd" id="1_il17n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ltgbn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5avk"]
bg_color = Color(0.890196, 0.917647, 0.937255, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sf1v6"]
bg_color = Color(0.847059, 0.886275, 0.913725, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_54jyw"]
bg_color = Color(0.929412, 0.94902, 0.960784, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Node2D" type="Node2D"]

[node name="Button" type="Button" parent="."]
offset_left = 434.0
offset_top = 544.0
offset_right = 674.0
offset_bottom = 612.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_pressed_color = Color(0.0627451, 0.0784314, 0.0980392, 1)
theme_override_colors/font_hover_color = Color(0.0627451, 0.0784314, 0.0980392, 1)
theme_override_colors/font_pressed_color = Color(0.0627451, 0.0784314, 0.0980392, 1)
theme_override_colors/font_focus_color = Color(0.0627451, 0.0784314, 0.0980392, 1)
theme_override_colors/font_color = Color(0.0627451, 0.0784314, 0.0980392, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_ltgbn")
theme_override_styles/hover = SubResource("StyleBoxFlat_x5avk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sf1v6")
theme_override_styles/normal = SubResource("StyleBoxFlat_54jyw")
text = "Roll Dice"
script = ExtResource("1_il17n")

[node name="Label" type="Label" parent="."]
offset_left = 434.0
offset_top = 422.0
offset_right = 674.0
offset_bottom = 516.0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("1_75kao")

[connection signal="button_down" from="Button" to="Button" method="_on_button_down"]
[connection signal="button_up" from="Button" to="Button" method="_on_button_up"]
[connection signal="mouse_entered" from="Button" to="Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="Label" method="_on_button_pressed"]
